<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/loginLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#191922"
        android:clipToOutline="true"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="0dp">


        <ImageView
            android:id="@+id/favicon_1.png"
            android:layout_width="110dp"
            android:layout_height="180dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="99dp"
            android:clipToOutline="true"
            android:src="@drawable/mikiflix_logo" />


        <TextView
            android:id="@+id/welcome_bac"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginHorizontal="32dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="416dp"
            android:text="@string/welcome_bac"
            android:textAppearance="@style/welcome_bac" />

        <LinearLayout
            android:layout_width="365dp"
            android:layout_height="236dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="332dp"
            android:layout_marginBottom="163dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="12dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:gravity="center_horizontal|top"
                    android:text="@string/email"
                    android:textAppearance="@style/email" />

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="306dp"
                    android:layout_height="44dp"
                    android:background="@drawable/input_style"
                    android:hint="@string/enter_email"
                    android:lineSpacingExtra="3sp"
                    android:paddingHorizontal="12dp"
                    android:textAppearance="@style/enter_email"
                    android:textColorHint="#808080" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:gravity="center_horizontal|top"
                    android:text="@string/password"
                    android:textAppearance="@style/password" />

                <EditText
                    android:id="@+id/input_passwd"
                    android:layout_width="306dp"
                    android:layout_height="44dp"
                    android:inputType="textPassword"
                    android:background="@drawable/input_style"
                    android:hint="@string/enter_passw"
                    android:lineSpacingExtra="3sp"
                    android:paddingHorizontal="12dp"
                    android:textAppearance="@style/enter_passw"
                    android:textColorHint="#808080" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="325dp"
            android:layout_height="45dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="619dp"
            android:background="@drawable/main_button"
            android:gravity="center"
            android:text="@string/login"
            android:textAppearance="@style/login" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="7dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="16dp"
            tools:context=".MainActivity">


            <TextView
                android:id="@+id/create_an_ac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Create an Account?"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/nav_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="@android:color/transparent"
                android:text="Register"
                android:textColor="#03A9F4" />

        </LinearLayout>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
